[package]
name = "hemlock"
version = "0.0.1"
authors = ["Ilya Klimenko <sn0wy-0wl@yandex.ru>"]
edition = "2021"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "simple hello world test"
section = "admin"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/hemlock", "usr/bin/hello", "755"]
]
maintainer-scripts = "debian/scripts"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10.35", features = ["vendored"] }
regex = "1.10.4"
